# node

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  go.mod  handmeoff..md  netlify.toml  plan.md  render.yaml  vercel.json
adapters/agents-sdk/: Dockerfile  constraints.txt  pyproject.toml
adapters/agents-sdk/src/agentos_agents_sdk/: __init__.py  cli.py  protocol.py  runtime.py
adapters/agents-sdk/tests/: test_protocol.py  test_runtime.py
agents/: docs-research.md  ops.md  qa.md  runtime-dev.md  security.md
docs/: agentos-architecture-security-audit-2026-07-06.md  backend-load-customer-service-audit.md  billing-and-metering.md  demo-ready-test-plan.md  deployment-and-scaling.md  design-partner-pilot-playbook.md  first-private-pilot-runbook.md  five-minute-proof-demo-sales-plan.md  pay-ready-roadmap.md  private-pilot-beneficiary-proposal.md  proof-demo-script.md  release-readiness.md  security-threat-model.md  stripe-pilot-payment-setup.md  uninstall-and-reset.md
outputs/: AGENTOS_DEPLOYMENT_AND_SCALING_PLAN.md  BENCHMARK_REPORT.md  CONTINUOUS_LEARNING_REPORT.md  IMPLEMENTATION_REPORT.md  LIVE_DEMO_REPORT.md  LOCALHOST_CONTROL_PLANE_PLAN.md  agentos-instincts.md  pilot-readiness-report.json
scripts/: Build.ps1  Demo-GitHubArtifact.ps1  Demo-LiveAgentsSdk.ps1  Demo-PayReady.ps1  Initialize-AgentOsMemory.ps1  Learning.ps1  Measure-BackendLoad.ps1  New-PayReadyProofPacket.ps1  New-PayReadyProofRecordingBrief.ps1  Package-ExampleImage.ps1  Package.ps1  SecurityAudit.ps1  Start-Localhost.ps1  Stop-Localhost.ps1  (+22 more)
(+115 files in other folders)
